examples/test/testpolicy5809.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5809
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key17: value13
      key28: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value7
          key12: value9
          key45: value45
      podSelector:
        matchLabels:
          key29: value28
          key10: value10
          key27: value23
